src/test/ui/feature-gate-repr_align.stderr
error[E0658]: the struct `#[repr(align(u16))]` attribute is experimental (see issue #33626)
  --> $DIR/feature-gate-repr_align.rs:12:1
   |
12 | #[repr(align(64))] //~ error: the struct `#[repr(align(u16))]` attribute is experimental
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(repr_align)] to the crate attributes to enable

error: aborting due to previous error

